# Solid-Native

./: .cursorrules  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/: copilot-instructions.md
scripts/: benchmark-startup.mjs  clean-ports.ps1
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BottomIconNavBar.tsx  Slider.tsx  TopHeader.tsx
src/pages/: ActivityPage.tsx  HomePage.tsx  ProfilePage.tsx  SearchPage.tsx
src/perf/: measureStartup.ts
src/primitives/: createNativeCommand.ts  createNativeGesture.ts  getInitialState.ts
src/styles/: dashboard.css
